<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_featured"
            android:icon="@drawable/ic_baseline_add_shopping_cart_24"
            android:title="@string/featured" />
        <item
            android:id="@+id/nav_bucket"
            android:icon="@drawable/ic_baseline_shopping_basket_24"
            android:title="@string/bucket" />
        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/my_products" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_sigout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/sign_out"
            android:onClick="signOut"/>
    </group>
</menu>