<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_featured">

    <fragment
        android:id="@+id/nav_featured"
        android:name="ge.jvash.flowers.ui.featured.FeaturedFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_featured" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="ge.jvash.flowers.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="ge.jvash.flowers.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>